--- a/apps/www/src/pages/index.astro
+++ b/apps/www/src/pages/index.astro
@@ -13,9 +13,9 @@ import logo from "../content/V5LightInnerShadow.svg";
     <title>Gavel Connect</title>
   </head>
   <body
-    class="bg-gradient-to-br from-pink-300 to-green-300 w-full h-screen flex flex-row items-center justify-center backgroundgrad"
+    class="bg-gradient-to-br from-pink-300 to-green-300 w-full h-screen flex flex-row items-center justify-center"
   >
-    <Image src={logo} alt="Gavel Connect" class="h-1/4 w-auto" />
+    <Image src={logo} alt="Gavel Connect" class="h-1/4 w-auto" loading="eager" />
   </body>
 </html>
 <style>
