Shadowed logo's don't look good on mobile

--- a/apps/www/src/pages/index.astro
+++ b/apps/www/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 import { Image } from "astro:assets";
 
-import logo from "../content/V5LightInnerShadow.svg";
+import logo from "../content/V5Light.svg";
 ---
 
 <html lang="en">
