--- a/apps/www/src/pages/index.astro
+++ b/apps/www/src/pages/index.astro
@@ -1,7 +1,8 @@
 ---
 import { Image } from "astro:assets";
 
-import logo from "../content/V5Light.svg";
+import dark from "../content/V5Dark.svg";
+import light from "../content/V5Light.svg";
 ---
 
 <html lang="en">
@@ -9,10 +10,6 @@ import logo from "../content/V5Light.svg";
     <meta charset="utf-8" />
     <link rel="icon" type="image/svg+xml" href="/V5Light.svg" />
     <meta name="viewport" content="width=device-width" />
-    <meta
-      http-equiv="Content-Security-Policy"
-      content="default-src 'self'; img-src https://*; child-src 'none';"
-    />
     <meta name="generator" content={Astro.generator} />
     <title>Gavel Connect</title>
   </head>
@@ -20,8 +17,9 @@ import logo from "../content/V5Light.svg";
     class="bg-gradient-to-br from-pink-300 to-green-300 w-full h-screen flex flex-row items-center justify-center"
   >
     <Image
-      src={logo}
-      alt="Gavel Connect"
+      src={light}
+      alt="Gavel Connect Logo"
+      id={"logo"}
       class="h-1/4 w-auto"
       loading="eager"
     />
