Added a description. Changed logo to shadow version.

--- a/apps/www/src/pages/index.astro
+++ b/apps/www/src/pages/index.astro
@@ -1,7 +1,8 @@
 ---
+import { SEO } from "astro-seo";
 import { Image } from "astro:assets";
 
-import light from "../assets/V5Light.svg";
+import light from "../assets/V5LightShadow.svg";
 ---
 
 <html lang="en">
@@ -10,8 +11,10 @@ import light from "../assets/V5Light.svg";
     <link rel="icon" type="image/svg+xml" href="/V5Light.svg" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
+    <meta name="description" content="Gavel Connect" />
     <title>Gavel Connect</title>
   </head>
+
   <body
     class="bg-gradient-to-br from-pink-300 to-green-300 w-full h-screen flex flex-row items-center justify-center"
   >
@@ -20,50 +23,8 @@ import light from "../assets/V5Light.svg";
       alt="Gavel Connect Logo"
       id={"logo"}
       densities={[1.5, 2]}
-      class={"w-1/4"}
+      class={"w-1/2 md:w-1/4"}
       loading="eager"
     />
   </body>
 </html>
-<style>
-  .backgroundgrad {
-    background-size: 300%;
-    -webkit-animation: AnimationName 16s ease infinite;
-    -moz-animation: AnimationName 16s ease infinite;
-    animation: AnimationName 16s ease infinite;
-  }
-
-  @-webkit-keyframes AnimationName {
-    0% {
-      background-position: 0% 50%;
-    }
-    50% {
-      background-position: 100% 50%;
-    }
-    100% {
-      background-position: 0% 50%;
-    }
-  }
-  @-moz-keyframes AnimationName {
-    0% {
-      background-position: 0% 50%;
-    }
-    50% {
-      background-position: 100% 50%;
-    }
-    100% {
-      background-position: 0% 50%;
-    }
-  }
-  @keyframes AnimationName {
-    0% {
-      background-position: 0% 50%;
-    }
-    50% {
-      background-position: 100% 50%;
-    }
-    100% {
-      background-position: 0% 50%;
-    }
-  }
-</style>
