Updated icons to latest version

--- a/apps/www/src/pages/index.astro
+++ b/apps/www/src/pages/index.astro
@@ -2,13 +2,13 @@
 import { SEO } from "astro-seo";
 import { Image } from "astro:assets";
 
-import light from "../assets/V5LightShadow.svg";
+import light from "../assets/V5Light.svg";
 ---
 
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="/V5Light.svg" />
+    <link rel="icon" type="image/png" href="/V6Icon.png" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
     <meta name="description" content="Gavel Connect" />
