--- a/apps/www/src/pages/assets.astro
+++ b/apps/www/src/pages/assets.astro
@@ -5,17 +5,29 @@ const imageFiles = await Astro.glob("../assets/*");
 // get all the file names from the assets folder
 ---
 
-<div
-  class="columns-1 sm:columns-2 md:columns-3 lg:columns-4 gap-3 mb-5 mx-auto w-full px-4"
->
-  {
-    imageFiles.map((img) => (
-      <Image
-        src={img.default}
-        width="600"
-        alt={img.default}
-        class="mb-3 w-full rounded"
-      />
-    ))
-  }
-</div>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" type="image/png" href="/V6Icon.png" />
+    <meta name="viewport" content="width=device-width" />
+    <meta name="generator" content={Astro.generator} />
+    <meta name="description" content="Gavel Connect | Assets" />
+    <title>Gavel Connect</title>
+  </head>
+  <div
+    class="columns-1 sm:columns-2 md:columns-3 lg:columns-4 gap-3 mb-5 mx-auto w-full px-4"
+  >
+    {
+      imageFiles.map((img) => (
+        <Image
+          src={img.default}
+          width="600"
+          alt={img.default}
+          class="mb-3 w-full rounded"
+        />
+      ))
+    }
+  </div>
+
+
+</html>
