--- a/apps/www/src/pages/index.astro
+++ b/apps/www/src/pages/index.astro
@@ -2,7 +2,7 @@
 import { SEO } from "astro-seo";
 import { Image } from "astro:assets";
 
-import light from "../assets/V5Light.svg";
+import light from "../assets/Light.svg";
 ---
 
 <html lang="en">
