--- a/apps/www/src/pages/assets.astro
+++ b/apps/www/src/pages/assets.astro
@@ -19,15 +19,35 @@ const imageFiles = await Astro.glob("../assets/*");
   >
     {
       imageFiles.map((img) => (
-        <Image
-          src={img.default}
-          width="600"
-          alt={img.default}
-          class="mb-3 w-full rounded"
-        />
+        <div class="flex flex-col gap-2 items-centre">
+          <Image
+            src={img.default}
+            width="600"
+            alt={img.default}
+            class="mb-3 w-full rounded"
+          />
+          <p class="text-center" />
+        </div>
       ))
     }
   </div>
+
+  <script>
+    document.addEventListener("DOMContentLoaded", function () {
+      const images = document.querySelectorAll("img");
+      images.forEach((image) => {
+        let regex = RegExp("[a-z]+.svg", "i");
+        // set the sibling paragraph text to the result of the regex
+        let match = regex.exec(image.src);
+        if (match && match[0]) {
+          console.log(match[0]);
+          // remove the F from the front of the file name. Weird regex workaround
+          (image.nextElementSibling as HTMLElement).innerText =
+            match[0].replace("F", "");
+        }
+      });
+    });
+  </script>
 
 
 </html>
