Updated where favicons are imported

--- a/apps/www/src/pages/index.astro
+++ b/apps/www/src/pages/index.astro
@@ -8,7 +8,7 @@ import light from "../assets/Light.svg";
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/png" href="/V6Icon.png" />
+    <link rel="icon" type="image/png" href="/Favicon.png" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
     <meta name="description" content="Gavel Connect" />
