--- a/apps/www/src/pages/assets.astro
+++ b/apps/www/src/pages/assets.astro
@@ -8,7 +8,7 @@ const imageFiles = await Astro.glob("../assets/*");
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/png" href="/Favicon.ico" />
+    <link rel="icon" type="image/png" href="/Favicon.png" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
     <meta name="description" content="Gavel Connect | Assets" />
