Converted to a bigger logo with text underneath it

--- a/apps/www/src/pages/index.astro
+++ b/apps/www/src/pages/index.astro
@@ -2,7 +2,7 @@
 import { SEO } from "astro-seo";
 import { Image } from "astro:assets";
 
-import light from "../assets/Light.svg";
+import light from "../assets/StackedBrandName.svg";
 ---
 
 <html lang="en">
@@ -23,7 +23,7 @@ import light from "../assets/Light.svg";
       alt="Gavel Connect Logo"
       id={"logo"}
       densities={[1.5, 2]}
-      class={"w-1/2 md:w-1/4"}
+      class={"w-1/2 md:w-2/5"}
       loading="eager"
     />
     <style>
