Update dependencies and assets

--- a/apps/www/src/pages/index.astro
+++ b/apps/www/src/pages/index.astro
@@ -1,13 +1,13 @@
 ---
 import { Image } from "astro:assets";
 
-import light from "../assets/V5Light.svg";
+import light from "../assets/StackedBrandName.svg";
 ---
 
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/png" href="/V6Icon.png" />
+    <link rel="icon" type="image/png" href="/Favicon.png" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
     <meta name="description" content="Gavel Connect" />
@@ -22,7 +22,7 @@ import light from "../assets/V5Light.svg";
       alt="Gavel Connect Logo"
       id={"logo"}
       densities={[1.5, 2]}
-      class={"w-1/2 md:w-1/4"}
+      class={"w-1/2 md:w-2/5"}
       loading="eager"
     />
     <style>
