Updated astro's favicons

--- a/apps/www/src/pages/index.astro
+++ b/apps/www/src/pages/index.astro
@@ -8,7 +8,11 @@ import light from "../assets/StackedBrandName.svg";
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/png" href="/Favicon.png" />
+    <link rel="icon" href="/favicon.ico" sizes="any">
+    <link rel="icon" href="/favicon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <meta name="theme-color" content="#1E293B">
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
     <meta name="description" content="Gavel Connect" />
