--- a/apps/www/src/pages/index.astro
+++ b/apps/www/src/pages/index.astro
@@ -8,11 +8,15 @@ import light from "../assets/StackedBrandName.svg";
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="/favicon.ico" sizes="any">
-    <link rel="icon" href="/favicon.svg" type="image/svg+xml">
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
-    <link rel="manifest" href="/site.webmanifest">
-    <meta name="theme-color" content="#1E293B">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#fb923c" />
+    <meta name="apple-mobile-web-app-title" content="Gavel Connect" />
+    <meta name="application-name" content="Gavel Connect" />
+    <meta name="msapplication-TileColor" content="#da532c" />
+    <meta name="theme-color" content="#fb923c" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
     <meta name="description" content="Gavel Connect" />
